[gd_scene load_steps=10 format=3 uid="uid://djnlbseypp130"]

[ext_resource type="Texture2D" uid="uid://bw8i6bpb2okaw" path="res://assets/projetil/projetil5/Sprite-0002.png" id="1_400a3"]
[ext_resource type="Script" uid="uid://b3363x27biore" path="res://projetil_chefe_2.gd" id="1_u0fln"]
[ext_resource type="Texture2D" uid="uid://cx0qmbscov68q" path="res://assets/projetil/projetil5/Sprite-0003.png" id="2_u0fln"]
[ext_resource type="Texture2D" uid="uid://374swlctk2l0" path="res://assets/projetil/projetil5/Sprite-0004.png" id="3_x4xl0"]
[ext_resource type="Texture2D" uid="uid://bnr5drfbqyfvr" path="res://assets/projetil/projetil5/Sprite-0005.png" id="4_1yqcq"]
[ext_resource type="Texture2D" uid="uid://dfmpih1dvbkiy" path="res://assets/projetil/projetil5/Sprite-0006.png" id="5_i6pyg"]
[ext_resource type="Texture2D" uid="uid://d1tte2eayy25u" path="res://assets/projetil/projetil5/Sprite-0007.png" id="6_ok0y6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0eurp"]
radius = 38.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6my5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_400a3")
}, {
"duration": 1.0,
"texture": ExtResource("2_u0fln")
}, {
"duration": 1.0,
"texture": ExtResource("3_x4xl0")
}, {
"duration": 1.0,
"texture": ExtResource("4_1yqcq")
}, {
"duration": 1.0,
"texture": ExtResource("5_i6pyg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ok0y6")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="Projetil_chefe2" type="Area2D"]
script = ExtResource("1_u0fln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0eurp")

[node name="TimerVida" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_6my5m")
autoplay = "default"
frame_progress = 0.99811673

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerVida" to="." method="_on_timer_vida_timeout"]
